--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,13 +14,13 @@
 			data-sap-ui-frameOptions="trusted"
 			data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-logLevel="info"
-			data-sap-ui-resourceroots='{"yelcho.mydemo.comprouting": "./","yelcho.reuse": "../reuse"}'
+			data-sap-ui-resourceroots='{"yelcho.mydemo.nestcomprouting": "./","yelcho.reuse": "../reuse"}'
 		></script>
 	</head>
 	<body class="sapUiBody">
 		<div
 			data-sap-ui-component
-			data-name="yelcho.mydemo.comprouting"
+			data-name="yelcho.mydemo.nestcomprouting"
 			data-id="container"
 			data-settings='{"id": "app"}'
 		></div>
