--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta charset="utf-8" />
-		<title>Component Based Navigation</title>
+		<title>Nested Component Navigation</title>
 		<script
 			id="sap-ui-bootstrap"
 			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
@@ -14,13 +14,13 @@
 			data-sap-ui-frameOptions="trusted"
 			data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-logLevel="info"
-			data-sap-ui-resourceroots='{"yelcho.mydemo.nestcomprouting": "./","yelcho.reuse": "../reuse"}'
+			data-sap-ui-resourceroots='{"yelcho.mydemo.nestcomproute": "./","yelcho.reuse": "../reuse"}'
 		></script>
 	</head>
 	<body class="sapUiBody">
 		<div
 			data-sap-ui-component
-			data-name="yelcho.mydemo.nestcomprouting"
+			data-name="yelcho.mydemo.nestcomproute"
 			data-id="container"
 			data-settings='{"id": "app"}'
 		></div>
